--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 @layer base {
-  html {
+  @font-face {
     font-family:
       'Pretendard Variable',
       Pretendard,
@@ -20,5 +20,6 @@
       'Segoe UI Emoji',
       'Segoe UI Symbol',
       sans-serif;
+    src: "https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css";
   }
 }
