--- a/src/components/addCart/addCart.html
+++ b/src/components/addCart/addCart.html
@@ -40,7 +40,7 @@
     
     <div class="min-h-screen flex jusrify-center items-center bg-amber-700 br-">
     
-      <dialog id="addCart" class="w-396pxr bg-white block px-6 py-5 rounded-2xl shadow-[0_8px_36px_0_rgba(0,0,0,0.2)] flex flex-col flex">
+      <dialog id="addCart" class="w-396pxr bg-white px-6 py-5 rounded-2xl shadow-[0_8px_36px_0_rgba(0,0,0,0.2)] flex flex-col">
         <div class="add_option bg-slate-300">
           <div class="option_name font-normal">
             <span class="product_brand">[풀무원]</span>
