[🎨Modify]: addCart.html .option_price flex 배치
addCart.html .option_price flex 배치

--- a/src/components/addCart/addCart.html
+++ b/src/components/addCart/addCart.html
@@ -40,13 +40,13 @@
     
     <div class="min-h-screen flex jusrify-center items-center bg-amber-700 br-">
     
-      <dialog id="addCart" class="w-396pxr bg-white px-6 py-5 rounded-2xl shadow-[0_8px_36px_0_rgba(0,0,0,0.2)] flex flex-col">
+      <dialog id="addCart" class="w-396pxr bg-white px-6 py-5 rounded-2xl shadow-[0_8px_36px_0_rgba(0,0,0,0.2)] flex flex-col gap-7">
         <div class="add_option bg-slate-300">
           <div class="option_name font-normal">
             <span class="product_brand">[풀무원]</span>
             <span class="product_name">탱탱쫄면 (4개입)</span>
           </div>
-          <div class="option_price">
+          <div class="option_price flex justify-between">
             <div>
               <span class="product_price">4,980</span>
               <span>원</span>
