[🎨Modify]: addCart.html .option_amount 합계, 가격 div로 묶음
addCart.html .option_amount 합계, 가격 div로 묶음

--- a/src/components/addCart/addCart.html
+++ b/src/components/addCart/addCart.html
@@ -64,10 +64,12 @@
         </div>
         
         <div class="option_amount bg-slate-300">
-          <span>합계</span>
-          <div class="option_sum">
-            <span>4,980</span>
-            <span>원</span>
+          <div>
+            <span>합계</span>
+            <div class="option_sum">
+              <span>4,980</span>
+              <span>원</span>
+            </div>
           </div>
           <span class="before:content-['적립'] before:bg-accent-yllow before:text-white">구매 시 5원 적립</span>
         </div>
