[🎨Modify]: addCart.html 레이아웃 완료
- addCart.html 레이아웃 완료
- flex 배치, 간격 조정

--- a/src/components/addCart/addCart.html
+++ b/src/components/addCart/addCart.html
@@ -42,7 +42,7 @@
     
       <dialog id="addCart" class="w-396pxr bg-white px-6 py-5 rounded-2xl shadow-[0_8px_36px_0_rgba(0,0,0,0.2)] flex flex-col gap-7">
         <div class="add_option bg-slate-300">
-          <div class="option_name font-normal">
+          <div class="option_name font-normal mb-3">
             <span class="product_brand">[풀무원]</span>
             <span class="product_name">탱탱쫄면 (4개입)</span>
           </div>
@@ -64,7 +64,7 @@
         </div>
         
         <div class="option_amount bg-slate-300">
-          <div>
+          <div class="flex justify-between mb-1">
             <span>합계</span>
             <div class="option_sum">
               <span>4,980</span>
@@ -75,7 +75,7 @@
         </div>
         
         
-        <ul class="add_cart_menu bg-slate-300">
+        <ul class="add_cart_menu bg-slate-300 flex gap-2">
           <li><button value="cancel">취소</button></li>
           <li><button id="addBtn">장바구니 담기</button></li>
         </ul>
