[🎨Modify]: addCart.html input 소스 경로 수정
addCart.html
- input 소스 경로 수정

--- a/src/components/addCart/addCart.html
+++ b/src/components/addCart/addCart.html
@@ -56,11 +56,11 @@
               <span>원</span>
             </div>
             <div class="option_count flex justify-between items-center w-84pxr h-30pxr box-content bg-white border border-solid border-gray-200">
-              <button type="button" class="minus w-30pxr h-30pxr" style="background-image: url(/input/Disabled=true.svg);">
+              <button type="button" class="minus w-30pxr h-30pxr" style="background-image: url(/input/minus-disabled.svg);">
                 <span class="sr-only">감소</span>
               </button>
               <span class="item_count">1</span>
-              <button type="button"  class="plus w-30pxr h-30pxr" style="background-image: url(/input/Disabled=false-1.svg);">
+              <button type="button"  class="plus w-30pxr h-30pxr" style="background-image: url(/input/plus.svg);">
                 <span class="sr-only">증가</span>
               </button>
             </div>
@@ -76,7 +76,7 @@
             </div>
           </div>
           <div class="reward">
-            <span class="bg-accent-yllow px-2 text-white text-label-small rounded-[1px]">적립</span>
+            <span class="bg-accent-yellow px-2 text-white text-label-small rounded-[1px]">적립</span>
             <span class="ml-3" >구매 시 5원 적립</span>
           </div>
         </div>
