[🎨Modify]: header 태그 추가

--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -37,6 +37,6 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
   <body>
-    <footer></footer>
+    <header class="">여기 헤드</header>
   </body>
 </html>
