[✨Feat]: sns 링크 연결
- 각 SNS마다 클릭 시 링크로 이동

--- a/src/components/footer/footer.html
+++ b/src/components/footer/footer.html
@@ -117,20 +117,40 @@
             <p>팩스 : 070-7500-6098</p>
           </div>
           <ul class="social_media_links">
-            <li>
-              <a href="#"></a>
+            <li class="w-30pxr h-30pxr">
+              <a
+                href="https://blog.naver.com/marketkurly"
+                class="block w-full h-full bg-[url('/icon/sns_icon.png')] bg-cover"
+              >
+              </a>
             </li>
-            <li>
-              <a href="#"></a>
+            <li class="w-30pxr h-30pxr">
+              <a
+                href="https://www.youtube.com/channel/UCfpdjL5pl-1qKT7Xp4UQzQg"
+                class="block w-full h-full bg-[url('/icon/sns_icon.png')] bg-cover"
+                style="background-position: 30px 0"
+              ></a>
             </li>
-            <li>
-              <a href="#"></a>
+            <li class="w-30pxr h-30pxr">
+              <a
+                href="https://m.post.naver.com/marketkurly"
+                class="block w-full h-full bg-[url('/icon/sns_icon.png')] bg-cover"
+                style="background-position: 60px 0"
+              ></a>
             </li>
-            <li>
-              <a href="#"></a>
+            <li class="w-30pxr h-30pxr">
+              <a
+                href="https://www.instagram.com/marketkurly/"
+                class="block w-full h-full bg-[url('/icon/sns_icon.png')] bg-cover"
+                style="background-position: 90px 0"
+              ></a>
             </li>
-            <li>
-              <a href="#"></a>
+            <li class="w-30pxr h-30pxr">
+              <a
+                href="https://www.facebook.com/Marketkurly/"
+                class="block w-full h-full bg-[url('/icon/sns_icon.png')] bg-cover"
+                style="background-position: 120px 0"
+              ></a>
             </li>
           </ul>
         </div>
