--- a/src/components/footer/footer.html
+++ b/src/components/footer/footer.html
@@ -97,7 +97,10 @@
           <div class="region_info">
             <p>
               법인명 (상호) : 주식회사 잔디 | 사업자등록번호 : 261-81-23567 |
-              <a href="">사업자정보 확인</a>
+              <a
+                href="https://www.ftc.go.kr/bizCommPop.do?wrkr_no=2618123567&apv_perm_no="
+                >사업자정보 확인</a
+              >
             </p>
             <p>
               통신판매업 : 제 2018-서울강남-01646 | 개인정보보호책임자 : 금잔디
