[✨Feat]: button -> a 태그로 변경 및 링크
- button -> a 태그로 변경
- 태그 클릭 시, 링크 넘어가게 구현

--- a/src/components/footer/footer.html
+++ b/src/components/footer/footer.html
@@ -63,7 +63,11 @@
               </div>
             </div>
             <div class="bulk_order">
-              <button>대량주문 문의</button>
+              <a
+                href="https://docs.google.com/forms/d/e/1FAIpQLScWcjRuN6eWJK-G8x3NwBfE8IyKZIOq7jhD3fUXuKSWwPqzJw/viewform"
+                target="_blank"
+                >대량주문 문의</a
+              >
               <div>
                 월~금요일 | 오전 9시 - 오후 6시<br />
                 점심시간 | 낮 12시 - 오후 1시
