[🔧Add]: footer 아이콘 이미지 추가
- 인증 관련 아이콘 추가

--- a/src/components/footer/footer.html
+++ b/src/components/footer/footer.html
@@ -41,7 +41,9 @@
       <div class="footer_inner">
         <div class="footer_top">
           <div class="customer_service">
-            <h2>고객행복센터</h2>
+            <h2 class="text-content text-heading-large font-bold leading-140">
+              고객행복센터
+            </h2>
             <strong>
               1644-1107
               <span>월~토요일 오전 7시 - 오후 6시</span>
