--- a/src/components/footer/footer.html
+++ b/src/components/footer/footer.html
@@ -37,19 +37,25 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
   <body>
-    <footer class="footer">
-      <div class="footer_inner">
-        <div class="footer_top">
-          <div class="customer_service">
-            <h2 class="text-content text-heading-large font-bold leading-140">
+    <!-- footer -->
+    <footer>
+      <!-- footer_inner -->
+      <div class="w-[1050px] my-0 mx-auto">
+        <!-- footer_top -->
+        <div class="flex justify-between">
+          <!-- customer_service -->
+          <div>
+            <h2 class="text-content text-heading-large font-bold">
               고객행복센터
             </h2>
             <strong>
               1644-1107
               <span>월~토요일 오전 7시 - 오후 6시</span>
             </strong>
-            <div class="cs_inquiry">
-              <div class="kakao">
+            <!-- cs_inquiry -->
+            <div>
+              <!-- kakao -->
+              <div>
                 <button>카카오톡 문의</button>
                 <div>
                   월~토요일 | 오전 7시 - 오후 6시<br />
@@ -57,14 +63,16 @@
                 </div>
               </div>
             </div>
-            <div class="one_to_one">
+            <!-- one_to_one -->
+            <div>
               <button>1:1 문의</button>
               <div>
                 365일<br />
                 고객센터 운영시간에 순차적으로 답변드리겠습니다.
               </div>
             </div>
-            <div class="bulk_order">
+            <!-- bulk_order -->
+            <div>
               <a
                 href="https://docs.google.com/forms/d/e/1FAIpQLScWcjRuN6eWJK-G8x3NwBfE8IyKZIOq7jhD3fUXuKSWwPqzJw/viewform"
                 target="_blank"
@@ -75,106 +83,146 @@
                 점심시간 | 낮 12시 - 오후 1시
               </div>
             </div>
+            <!-- cs_mail -->
+            <div>
+              <ul>
+                <li>
+                  비회원 문의 :
+                  <a href="mailto:help@jandicorp.com">help@jandicorp.com</a>
+                </li>
+                <li>
+                  비회원 대량주문 문의 :
+                  <a href="mailto:help@jandicorp.com">help@jandicorp.com</a>
+                </li>
+              </ul>
+            </div>
           </div>
-          <div class="cs_mail">
+          <!-- about_section -->
+          <div>
+            <!-- footer_navigation -->
+            <nav>
+              <ul class="flex justify-between">
+                <li><a href="#">잔디소개</a></li>
+                <li><a href="#">잔디소개영상</a></li>
+                <li><a href="#">인재채용</a></li>
+                <li><a href="#">이용약관</a></li>
+                <li><a href="#">개인정보처리방침</a></li>
+                <li><a href="#">이용안내</a></li>
+              </ul>
+            </nav>
+            <!-- region_info -->
+            <div>
+              <p>
+                법인명 (상호) : 주식회사 잔디 | 사업자등록번호 : 261-81-23567 |
+                <a
+                  href="https://www.ftc.go.kr/bizCommPop.do?wrkr_no=2618123567&apv_perm_no="
+                  >사업자정보 확인</a
+                >
+              </p>
+              <p>
+                통신판매업 : 제 2018-서울강남-01646 | 개인정보보호책임자 :
+                금잔디
+              </p>
+              <p>
+                주소 : 서울특별시 강남구 테헤란로 133, 18층(역삼동) | 대표이사 :
+                구준표
+              </p>
+              <p>
+                입점문의 : 입점문의하기 | 제휴문의 :
+                <a href="mailto:business@jandicorp.com"
+                  >business@jandicorp.com</a
+                >
+              </p>
+              <p>
+                채용문의 :
+                <a href="mailto:recruit@jandicorp.com">recruit@jandicorp.com</a>
+              </p>
+              <p>팩스 : 070-7500-6098</p>
+            </div>
+            <!-- social_media_links -->
             <ul>
-              <li>
-                비회원 문의 :
-                <a href="mailto:help@jandicorp.com">help@jandicorp.com</a>
+              <li class="w-30pxr h-30pxr">
+                <a
+                  href="https://blog.naver.com/marketkurly"
+                  class="block w-full h-full bg-[url('/icon/sns_icon.png')] bg-cover"
+                >
+                </a>
               </li>
-              <li>
-                비회원 대량주문 문의 :
-                <a href="mailto:help@jandicorp.com">help@jandicorp.com</a>
+              <li class="w-30pxr h-30pxr">
+                <a
+                  href="https://www.youtube.com/channel/UCfpdjL5pl-1qKT7Xp4UQzQg"
+                  class="block w-full h-full bg-[url('/icon/sns_icon.png')] bg-cover"
+                  style="background-position: 30px 0"
+                ></a>
+              </li>
+              <li class="w-30pxr h-30pxr">
+                <a
+                  href="https://m.post.naver.com/marketkurly"
+                  class="block w-full h-full bg-[url('/icon/sns_icon.png')] bg-cover"
+                  style="background-position: 60px 0"
+                ></a>
+              </li>
+              <li class="w-30pxr h-30pxr">
+                <a
+                  href="https://www.instagram.com/marketkurly/"
+                  class="block w-full h-full bg-[url('/icon/sns_icon.png')] bg-cover"
+                  style="background-position: 90px 0"
+                ></a>
+              </li>
+              <li class="w-30pxr h-30pxr">
+                <a
+                  href="https://www.facebook.com/Marketkurly/"
+                  class="block w-full h-full bg-[url('/icon/sns_icon.png')] bg-cover"
+                  style="background-position: 120px 0"
+                ></a>
               </li>
             </ul>
           </div>
         </div>
-        <div class="about_section">
-          <nav class="footer_navigation">
-            <ul>
-              <li><a href="#">잔디소개</a></li>
-              <li><a href="#">잔디소개영상</a></li>
-              <li><a href="#">인재채용</a></li>
-              <li><a href="#">이용약관</a></li>
-              <li><a href="#">개인정보처리방침</a></li>
-              <li><a href="#">이용안내</a></li>
-            </ul>
-          </nav>
-          <div class="region_info">
+        <!-- footer_middle -->
+        <div class="flex justify-between">
+          <div class="isms flex justify-between">
+            <img src="/public/icon/isms.png" alt="isms" />
             <p>
-              법인명 (상호) : 주식회사 잔디 | 사업자등록번호 : 261-81-23567 |
-              <a
-                href="https://www.ftc.go.kr/bizCommPop.do?wrkr_no=2618123567&apv_perm_no="
-                >사업자정보 확인</a
-              >
+              [인증범위] 마켓칼리 쇼핑몰 서비스 개발 운영<br />
+              (심사받지 않은 물리적 인프라 제외)<br />
+              [유효기간] 2022.01.19 ~ 2025.01.18
             </p>
-            <p>
-              통신판매업 : 제 2018-서울강남-01646 | 개인정보보호책임자 : 금잔디
-            </p>
-            <p>
-              주소 : 서울특별시 강남구 테헤란로 133, 18층(역삼동) | 대표이사 :
-              구준표
-            </p>
-            <p>
-              입점문의 : 입점문의하기 | 제휴문의 :
-              <a href="mailto:business@jandicorp.com">business@jandicorp.com</a>
-            </p>
-            <p>
-              채용문의 :
-              <a href="mailto:recruit@jandicorp.com">recruit@jandicorp.com</a>
-            </p>
-            <p>팩스 : 070-7500-6098</p>
           </div>
-          <ul class="social_media_links">
-            <li class="w-30pxr h-30pxr">
-              <a
-                href="https://blog.naver.com/marketkurly"
-                class="block w-full h-full bg-[url('/icon/sns_icon.png')] bg-cover"
-              >
-              </a>
-            </li>
-            <li class="w-30pxr h-30pxr">
-              <a
-                href="https://www.youtube.com/channel/UCfpdjL5pl-1qKT7Xp4UQzQg"
-                class="block w-full h-full bg-[url('/icon/sns_icon.png')] bg-cover"
-                style="background-position: 30px 0"
-              ></a>
-            </li>
-            <li class="w-30pxr h-30pxr">
-              <a
-                href="https://m.post.naver.com/marketkurly"
-                class="block w-full h-full bg-[url('/icon/sns_icon.png')] bg-cover"
-                style="background-position: 60px 0"
-              ></a>
-            </li>
-            <li class="w-30pxr h-30pxr">
-              <a
-                href="https://www.instagram.com/marketkurly/"
-                class="block w-full h-full bg-[url('/icon/sns_icon.png')] bg-cover"
-                style="background-position: 90px 0"
-              ></a>
-            </li>
-            <li class="w-30pxr h-30pxr">
-              <a
-                href="https://www.facebook.com/Marketkurly/"
-                class="block w-full h-full bg-[url('/icon/sns_icon.png')] bg-cover"
-                style="background-position: 120px 0"
-              ></a>
-            </li>
-          </ul>
+          <div class="privacy flex justify-between">
+            <img src="/public/icon/privacy.png" alt="privacy" />
+            <p>
+              개인정보보호 우수 웹사이트<br />
+              개인정보처리시스템 인증 (ePRIVACY PLUS)
+            </p>
+          </div>
+          <div class="toss flex justify-between">
+            <img src="/public/icon/tosspayments.png" alt="tosspayments" />
+            <p>
+              토스페이먼츠 구매안전(에스크로) 서비스를 이용하실 수 있습니다.
+            </p>
+          </div>
+          <div class="woori_bank flex justify-between">
+            <img src="/public/icon/wooriBank.png" alt="wooriBank" />
+            <p>
+              고객님이 현금으로 결제한 금액에 대해 우리은행과 채무지급보증
+              계약을 체결하여 안전거래를 보장하고 있습니다.
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="footer_middle"></div>
-      <div class="footer_bottom">
-        <div class="bottom_inner">
-          <p>
-            마켓컬리에서 판매되는 상품 중에는 마켓컬리에 입점한 개별 판매자가
-            판매하는 마켓플레이스(오픈마켓) 상품이 포함되어 있습니다.<br />
-            마켓플레이스(오픈마켓) 상품의 경우 컬리는 통신판매중개자로서
-            통신판매의 당사자가 아닙니다. 컬리는 해당 상품의 주문, 품질,
-            교환/환불 등 의무와 책임을 부담하지 않습니다.
-          </p>
-          <p>© KURLY CORP. ALL RIGHTS RESERVED</p>
+        <!-- footer_bottom -->
+        <div>
+          <!-- bottom_inner -->
+          <div>
+            <p>
+              마켓컬리에서 판매되는 상품 중에는 마켓컬리에 입점한 개별 판매자가
+              판매하는 마켓플레이스(오픈마켓) 상품이 포함되어 있습니다.<br />
+              마켓플레이스(오픈마켓) 상품의 경우 컬리는 통신판매중개자로서
+              통신판매의 당사자가 아닙니다. 컬리는 해당 상품의 주문, 품질,
+              교환/환불 등 의무와 책임을 부담하지 않습니다.
+            </p>
+            <p>© KURLY CORP. ALL RIGHTS RESERVED</p>
+          </div>
         </div>
       </div>
     </footer>
