[🎨Modify]: tailwind.config.js 폰트 함수 추가
- tailwind.config.js에 폰트부분 pxr이 사라진 거 같아서 추가했습니다.

--- a/src/components/footer/footer.html
+++ b/src/components/footer/footer.html
@@ -38,16 +38,14 @@
   </head>
   <body>
     <!-- footer -->
-    <footer>
+    <footer class="text-content">
       <!-- footer_inner -->
       <div class="w-[1050px] my-0 mx-auto">
         <!-- footer_top -->
-        <div class="flex justify-between">
+        <div class="flex justify-between pb-8 pt-7">
           <!-- customer_service -->
           <div>
-            <h2 class="text-content text-heading-large font-bold">
-              고객행복센터
-            </h2>
+            <h2 class="font-bold text-heading-large">고객행복센터</h2>
             <strong>
               1644-1107
               <span>월~토요일 오전 7시 - 오후 6시</span>
@@ -98,7 +96,7 @@
             </div>
           </div>
           <!-- about_section -->
-          <div>
+          <div class="flex flex-col gap-7">
             <!-- footer_navigation -->
             <nav>
               <ul class="flex justify-between">
@@ -140,7 +138,7 @@
               <p>팩스 : 070-7500-6098</p>
             </div>
             <!-- social_media_links -->
-            <ul>
+            <ul class="flex justify-start gap-5">
               <li class="w-30pxr h-30pxr">
                 <a
                   href="https://blog.naver.com/marketkurly"
@@ -180,8 +178,8 @@
           </div>
         </div>
         <!-- footer_middle -->
-        <div class="flex justify-between">
-          <div class="isms flex justify-between">
+        <div class="flex justify-between pt-6 pb-8">
+          <div class="flex justify-between isms">
             <img src="/public/icon/isms.png" alt="isms" />
             <p>
               [인증범위] 마켓칼리 쇼핑몰 서비스 개발 운영<br />
@@ -189,20 +187,20 @@
               [유효기간] 2022.01.19 ~ 2025.01.18
             </p>
           </div>
-          <div class="privacy flex justify-between">
+          <div class="flex justify-between privacy">
             <img src="/public/icon/privacy.png" alt="privacy" />
             <p>
               개인정보보호 우수 웹사이트<br />
               개인정보처리시스템 인증 (ePRIVACY PLUS)
             </p>
           </div>
-          <div class="toss flex justify-between">
+          <div class="flex justify-between toss">
             <img src="/public/icon/tosspayments.png" alt="tosspayments" />
             <p>
               토스페이먼츠 구매안전(에스크로) 서비스를 이용하실 수 있습니다.
             </p>
           </div>
-          <div class="woori_bank flex justify-between">
+          <div class="flex justify-between woori_bank">
             <img src="/public/icon/wooriBank.png" alt="wooriBank" />
             <p>
               고객님이 현금으로 결제한 금액에 대해 우리은행과 채무지급보증
@@ -210,19 +208,20 @@
             </p>
           </div>
         </div>
-        <!-- footer_bottom -->
-        <div>
-          <!-- bottom_inner -->
-          <div>
-            <p>
-              마켓컬리에서 판매되는 상품 중에는 마켓컬리에 입점한 개별 판매자가
-              판매하는 마켓플레이스(오픈마켓) 상품이 포함되어 있습니다.<br />
-              마켓플레이스(오픈마켓) 상품의 경우 컬리는 통신판매중개자로서
-              통신판매의 당사자가 아닙니다. 컬리는 해당 상품의 주문, 품질,
-              교환/환불 등 의무와 책임을 부담하지 않습니다.
-            </p>
-            <p>© KURLY CORP. ALL RIGHTS RESERVED</p>
-          </div>
+      </div>
+
+      <!-- footer_bottom -->
+      <div class="pt-5 pb-8 text-center bg-gray-50">
+        <!-- bottom_inner -->
+        <div class="text-gray-400 text-10pxr">
+          <p class="pb-2">
+            마켓컬리에서 판매되는 상품 중에는 마켓컬리에 입점한 개별 판매자가
+            판매하는 마켓플레이스(오픈마켓) 상품이 포함되어 있습니다.<br />
+            마켓플레이스(오픈마켓) 상품의 경우 컬리는 통신판매중개자로서
+            통신판매의 당사자가 아닙니다. 컬리는 해당 상품의 주문, 품질,
+            교환/환불 등 의무와 책임을 부담하지 않습니다.
+          </p>
+          <p>© KURLY CORP. ALL RIGHTS RESERVED</p>
         </div>
       </div>
     </footer>
