--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -35,8 +35,27 @@
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css"
     />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <script type="module" src="./header.js"></script>
   </head>
   <body>
-    <header class="">여기 헤드</header>
+    <header id="header">
+      <div class="flex w-full top_banner bg-primary">
+        <div
+          class="text-white w-[65.625rem] flex_center mx-auto py-1 leading-4"
+        >
+          <span class="font-light w-[63rem] text-center"
+            >지금 가입하고 인기상품 <strong class="font-medium">100원</strong>에
+            받아가세요!</span
+          >
+          <button type="button">
+            <img
+              src="/icon/close_banner.png"
+              alt="배너 쿠폰 닫기 버튼"
+              class="w-42pxr h-42pxr"
+            />
+          </button>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
