--- a/src/components/addCart/addCart.html
+++ b/src/components/addCart/addCart.html
@@ -51,9 +51,9 @@
             <span class="product_name">탱탱쫄면 (4개입)</span>
           </div>
           <div class="option_price flex justify-between items-center">
-            <div class="font-bold">
-              <span class="product_price">4,980</span>
-              <span>원</span>
+            <div class="product_price font-bold">
+              <span class="after_discount">4,980원</span>
+              <span class="before_discount line-through text-[12px] text-gray-200 font-normal ml-1">5,600원</span>
             </div>
             <div class="option_count flex justify-between items-center w-84pxr h-30pxr box-content bg-white border border-solid border-gray-200">
               <button type="button" class="minus w-30pxr h-30pxr" style="background-image: url(/input/minus-disabled.svg);">
@@ -71,8 +71,7 @@
           <div class="w-full flex justify-between items-end">
             <span>합계</span>
             <div class="option_sum font-bold text-heading-xl">
-              <span>4,980</span>
-              <span>원</span>
+              <span>4,980원</span>
             </div>
           </div>
           <div class="reward">
