[🎨Modify]: addCart.html reward css 수정
addCart.html
- reward css 수정: font-size, margin, flex 배치

--- a/src/components/addCart/addCart.html
+++ b/src/components/addCart/addCart.html
@@ -74,9 +74,9 @@
               <span>4,980원</span>
             </div>
           </div>
-          <div class="reward">
-            <span class="bg-accent-yellow px-2 text-white text-label-small rounded-[1px]">적립</span>
-            <span class="ml-3" >구매 시 5원 적립</span>
+          <div class="reward text-label-small flex">
+            <span class="bg-accent-yellow px-2 text-white rounded-[1px]">적립</span>
+            <span class="ml-2" >구매 시 5원 적립</span>
           </div>
         </div>
         
