--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -22,3 +22,10 @@
       sans-serif;
   }
 }
+
+.tab {
+  @apply py-15pxr border-gray-300 border bg-gray-50 w-full font-semibold;
+}
+.is_active_tab {
+  @apply bg-white border-gray-100 border-b-0 text-primary;
+}
