[🎨Modify]: header_box 추가

--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -56,6 +56,13 @@
           </button>
         </div>
       </div>
+      <div class="header_box">
+        <ul class="">
+          <li><a href="#">회원가입</a></li>
+          <li><a href="#">로그인</a></li>
+          <li><a href="#">고객센터</a></li>
+        </ul>
+      </div>
     </header>
   </body>
 </html>
