[✨Feat]: closeBanner 클릭 -> top_banner display none

--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -56,11 +56,15 @@
           </button>
         </div>
       </div>
-      <div class="header_box">
-        <ul class="">
-          <li><a href="#">회원가입</a></li>
-          <li><a href="#">로그인</a></li>
-          <li><a href="#">고객센터</a></li>
+      <div class="header_box w1050 my-2">
+        <ul class="relative flex justify-end">
+          <li class=""><a href="#">회원가입</a></li>
+          <li class="line">
+            <a href="#">로그인</a>
+          </li>
+          <li class="line">
+            <a href="#">고객센터</a>
+          </li>
         </ul>
       </div>
     </header>
