--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -5,3 +5,15 @@
 .banner_hidden {
   @apply h-0;
 }
+
+.product_nav {
+  @apply flex justify-center w-150pxr text-center leading-5 hover:cursor-pointer hover:underline hover:text-primary;
+}
+
+.menu_hidden {
+  @apply hidden overflow-hidden;
+}
+
+.focus_menu {
+  @apply w-full px-3 py-2 hover:bg-gray-50 hover:text-primary;
+}
