[🎨Modify]: class명 내에 . 제거

--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -165,7 +165,7 @@
               카테고리
             </button>
             <ul
-              class="absolute .menu_hidden bg-white border top-9 w-247pxr"
+              class="absolute bg-white border menu_hidden top-9 w-247pxr"
               id="menu_list"
             >
               <li class="focus_menu">
