[🔧Add]: cart.css 추가
cart.css 추가
- 클래스 @apply
- tailwind.css에 @import './cart.css';

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -5,6 +5,7 @@
 @import 'tailwindcss/utilities.css';
 /* @import './custom-utilities.css'; */
 
+@import './cart.css';
 @import './font.css';
 @import './common.css';
 @import './header.css';
