[🎨Modify]: 코드 변경
비밀글로 수정하기 코드변경

--- a/src/components/detail/detailModal.html
+++ b/src/components/detail/detailModal.html
@@ -154,13 +154,19 @@
             </div>
           </div>
           <!-- 비밀글 -->
-          <div>
-            <svg role="문의하기 체크박스" width="23" height="23">
-              <use href="/public/icon/_sprite.svg#Check" />
-            </svg>
-            <input type="checkbox" name="" id="" />
-            <label>비밀글로 문의하기</label>
-          </div>
+          <fieldset class="item_select">
+            <input
+              type="checkbox"
+              id="itemSelect2"
+              class="input_checkbox_nonlabel peer top-[-17px]"
+            />
+            <label
+              for="itemSelect2"
+              class="checkbox_before_nonlabel peer-checked:before:bg-[url(/input/checkBox-isChecked.svg)]"
+            >
+              <span>비밀글로 문의하기</span>
+            </label>
+          </fieldset>
         </div>
 
         <!-- button -->
