--- a/src/components/addCart/addCart.html
+++ b/src/components/addCart/addCart.html
@@ -38,58 +38,62 @@
   </head>
   <body>
     
-    <div class="min-h-screen flex jusrify-center items-center bg-amber-700">
+    <div class="flex items-center min-h-screen jusrify-center bg-amber-700">
     
       
       
       
       <!-- addCart component -->      
-      <dialog id="addCart" class="w-356pxr box-content bg-white px-5 py-6 rounded-2xl shadow-[0_8px_36px_0_rgba(0,0,0,0.2)] flex flex-col gap-7">
+      <dialog id="addCart" class="w-356pxr box-content bg-white px-5 py-6 rounded-2xl shadow-[0_8px_36px_0_rgba(0,0,0,0.2)] flex flex-col ">
         <div class="add_option">
-          <div class="option_name font-normal mb-3 text-content">
+          <div class="pb-2 font-normal option_name text-content">
             <span class="product_brand">[풀무원]</span>
             <span class="product_name">탱탱쫄면 (4개입)</span>
           </div>
-          <div class="option_price flex justify-between items-center">
-            <div class="product_price font-bold">
+          <div class="flex items-center justify-between option_price">
+            <div class="font-bold product_price">
               <span class="after_discount">4,980원</span>
               <span class="before_discount line-through text-[12px] text-gray-200 font-normal ml-1">5,600원</span>
             </div>
-            <div class="option_count flex justify-between items-center w-84pxr h-30pxr box-content bg-white border border-solid border-gray-200">
+            <div class="box-content flex items-center justify-between bg-white border border-gray-200 border-solid option_count w-84pxr h-30pxr">
               <button type="button" class="minus w-30pxr h-30pxr" style="background-image: url(/input/minus-disabled.svg);">
-                <span class="sr-only">감소</span>
+                <span class="sr-only">수량 감소</span>
               </button>
               <span class="item_count">1</span>
               <button type="button"  class="plus w-30pxr h-30pxr" style="background-image: url(/input/plus.svg);">
-                <span class="sr-only">증가</span>
+                <span class="sr-only">수량 증가</span>
               </button>
             </div>
           </div>
         </div>
         
-        <div class="option_amount flex flex-col items-end gap-1">
-          <div class="w-full flex justify-between items-end">
+        <div class="flex flex-col items-end gap-1 pb-5 option_amount pt-14pxr border-t-[1px] border-t-gray-50">
+          <div class="flex items-end justify-between w-full">
             <span>합계</span>
-            <div class="option_sum font-bold text-heading-xl">
+            <div class="font-bold option_sum text-heading-xl">
               <span>4,980원</span>
             </div>
           </div>
-          <div class="reward text-label-small flex">
+          <div class="flex reward text-label-small">
             <span class="bg-accent-yellow px-2 text-white rounded-[1px]">적립</span>
             <span class="ml-2" >구매 시 5원 적립</span>
           </div>
         </div>
         
         
-        <ul class="add_cart_menu flex gap-2 font-semibold">
-          <li class="w-full"><button type="button" value="cancel" class="w-full h-54pxr text-content rounded border border-gray-400">취소</button></li>
-          <li class="w-full"><button type="button" id="addBtn" class="w-full h-54pxr text-white bg-primary rounded">장바구니 담기</button></li>
+        <ul class="flex gap-2 font-semibold add_cart_menu">
+          <li class="w-full"><button type="button" value="cancel" class="w-full border border-gray-400 rounded h-54pxr text-content">취소</button></li>
+          <li class="w-full"><button type="button" id="addBtn" class="w-full text-white rounded h-54pxr bg-primary">장바구니 담기</button></li>
         </ul>
       </dialog>
       <!-- addCart component -->
       
       
-    
+      <!-- addCart bubble component -->
+      
+      
+      <!-- addCart bubble component -->
+      
       
       
     </div>
