[🎨Modify]: header fixed 제거

--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -1,4 +1,4 @@
-<div class="fixed top-0 w-full bg-white shadow-md z_index">
+<div class="w-full bg-white shadow-md z_index">
   <!-- Top Banner -->
   <div class="flex top_banner bg-primary">
     <div class="text-white w-[1050px] mx-auto flex_center py-1">
