--- a/src/components/addCart/index.html
+++ b/src/components/addCart/index.html
@@ -38,21 +38,24 @@
   </head>
   <body>
     
-    <div class="flex items-center min-h-screen jusrify-center bg-amber-700">
     
-      
-      
-      
-      <!-- addCart component -->      
-      <dialog id="addCart" class="w-356pxr box-content bg-white px-5 py-6 rounded-2xl shadow-[0_8px_36px_0_rgba(0,0,0,0.2)] flex flex-col ">
-        <div class="add_option">
-          <div class="pb-2 font-normal option_name text-content">
+    
+    <!-- addCart component -->      
+    <div class="flex items-center min-h-screen">
+      <dialog id="addCart" class="w-356pxr box-content bg-white px-5 py-6 rounded-2xl shadow-[0_8px_36px_0_rgba(0,0,0,0.2)] flex flex-col">
+        <div class="flex items-center pb-3 cart_product_thumb text-15pxr">
+          <span class="block w-50pxr h-50pxr mr-3.5" style="background-image: url(https://via.placeholder.com/50x50);"></span>
+          <span class="product_brand">[풀무원]</span>
+          <span class="product_name">탱탱쫄면 (4개입)</span>
+        </div>
+        <div class="py-3 add_option border-t-[1px] border-t-gray-50">
+          <div class="pb-1 font-normal option_name text-content text-14pxr">
             <span class="product_brand">[풀무원]</span>
             <span class="product_name">탱탱쫄면 (4개입)</span>
           </div>
           <div class="flex items-center justify-between option_price">
             <div class="font-bold product_price">
-              <span class="after_discount">4,980원</span>
+              <span class="after_discount text-[14px]">4,980원</span>
               <span class="before_discount line-through text-[12px] text-gray-200 font-normal ml-1">5,600원</span>
             </div>
             <div class="box-content flex items-center justify-between bg-white border border-gray-200 border-solid option_count w-84pxr h-30pxr">
@@ -70,7 +73,7 @@
         <div class="flex flex-col items-end gap-1 pb-5 option_amount pt-14pxr border-t-[1px] border-t-gray-50">
           <div class="flex items-end justify-between w-full">
             <span>합계</span>
-            <div class="font-bold option_sum text-heading-xl">
+            <div class="font-bold option_sum text-heading-large">
               <span>4,980원</span>
             </div>
           </div>
@@ -86,16 +89,14 @@
           <li class="w-full"><button type="button" id="addBtn" class="w-full text-white rounded h-54pxr bg-primary">장바구니 담기</button></li>
         </ul>
       </dialog>
-      <!-- addCart component -->
-      
-      
-      <!-- addCart bubble component -->
-      
-      
-      <!-- addCart bubble component -->
-      
-      
-      
     </div>
+    <!-- addCart component -->
+    
+    
+
+    
+      
+      
+      
   </body>
 </html>
